[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/boss/BBM FISH KALABAN.png" type="Texture" id=1]
[ext_resource path="res://scripts/bossBehavior.gd" type="Script" id=2]
[ext_resource path="res://scripts/state/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://scripts/state/bossIdle.gd" type="Script" id=4]
[ext_resource path="res://scripts/state/BossAttack.gd" type="Script" id=5]
[ext_resource path="res://scripts/state/BossChase.gd" type="Script" id=6]
[ext_resource path="res://src/boss/BossInkAttack.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 8.57449

[sub_resource type="CircleShape2D" id=2]
radius = 58.1378

[node name="Boss" type="Area2D" groups=["bosses"]]
scale = Vector2( 3, 3 )
script = ExtResource( 2 )
base_move_speed = 100.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="BossBody" type="CollisionShape2D" parent="."]
position = Vector2( 59, 2 )
scale = Vector2( -4.78163, -4.66071 )
shape = SubResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( -53, -1 )
rotation = 0.0229328
scale = Vector2( 1, 0.796384 )
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state_node_path = NodePath("BossIdle")

[node name="BossIdle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
max_wander_time = 6.0
detection_radius = 500.0
chance_to_ink_attack = 0.5

[node name="BossAttack" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="BossChase" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
chase_speed = 150.0

[node name="BossInkAttack" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="DamageCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="InkAttackCooldownTimer" type="Timer" parent="."]
one_shot = true
